objects/FinServ__AccountAccountRelation__c.object
<CustomObject>
    <description>A relationship between two accounts, such as a household and a business account.</description>
    <fields>
        <fullName>External_ID__c</fullName>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>FINS_Q_Branch_Demo_Reference__c</fullName>
        <description>Field choice selection indicates that the corresponding record is referenced in one or more official Q-Branch demo guides.</description>
        <label>Q-Branch Demo Reference</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>FINS_Q_Branch_Demo_Guide</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>FinServ__Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>RelatedFromAccounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FinServ__Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FinServ__AssociationType__c</fullName>
        <label>Association Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Group</fullName>
                </value>
                <value>
                    <fullName>Member</fullName>
                </value>
                <value>
                    <fullName>Peer</fullName>
                    <default>true</default>
                    <label>Peer</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FinServ__DeclarationType__c</fullName>
        <label>Declaration Type</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Self declaration</fullName>
                </value>
                <value>
                    <fullName>Official Register</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FinServ__EndDate__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FinServ__ExternalId__c</fullName>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>64</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>FinServ__InverseRelationship__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Uniquely identifies the relationship between Account__c and RelatedAccount__c so that it can be referenced by a trigger that creates the inverse relationship record.</description>
        <label>InverseRelationship</label>
        <referenceTo>FinServ__AccountAccountRelation__c</referenceTo>
        <relationshipLabel>Account Account Relations</relationshipLabel>
        <relationshipName>AccountAccountRelations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FinServ__IsShareholder__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether the stakeholder is a shareholder (true) or not (false).</description>
        <label>Shareholder</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FinServ__RelatedAccount__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Related Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>RelatedToAccounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FinServ__Role__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Related Role</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>FinServ__ReciprocalRole__c.RecordType.Name</field>
                <operation>equals</operation>
                <value>Account Role</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>FinServ__ReciprocalRole__c</referenceTo>
        <relationshipName>AccountReciprocalRole</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FinServ__ShareholderHierarchyLevel__c</fullName>
        <description>The number of levels between the account and the intermediate shareholder. The shareholder hierarchy level is applicable only to an intermediate share holder.</description>
        <label>Shareholder Hierarchy Level</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FinServ__ShareholderHierarchyRole__c</fullName>
        <description>Specifies the shareholder&apos;s ownership type.</description>
        <label>Shareholder Hierarchy Role</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Ultimate Beneficial Owner</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FinServ__ShareholderType__c</fullName>
        <description>Specifies the type of the shareholder.</description>
        <label>Shareholder Type</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Voting Rights</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FinServ__SourceSystemId__c</fullName>
        <externalId>true</externalId>
        <label>Source System ID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FinServ__StartDate__c</fullName>
        <defaultValue>TODAY()</defaultValue>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FinServ__TotalSharePercent__c</fullName>
        <description>The total percentage of shares owned by the stakeholder, combining both direct and indirect ownership.</description>
        <label>Total Share Percent</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>UCIN_External_ID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>Cloud Explorer External ID field used to track IDs between systems.</description>
        <externalId>true</externalId>
        <label>UCIN External ID</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Account-Account Relationship</label>
    <listViews>
        <fullName>FinServ__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>R-{000000000}</displayFormat>
        <label>Account Relation Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Account Account Relations</pluralLabel>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>FinServ__AARCanOnlyBeDeactivated</fullName>
        <active>true</active>
        <errorConditionFormula>AND(OR(ISCHANGED(FinServ__Account__c),ISCHANGED(FinServ__RelatedAccount__c)),NOT(ISNEW()))</errorConditionFormula>
        <errorMessage>This record can&apos;t be edited. To update relationship information, you can deactivate this record and create a new one.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>FinServ__AccountAndRelatedAccountCannotBeSame</fullName>
        <active>true</active>
        <errorConditionFormula>FinServ__Account__c = FinServ__RelatedAccount__c</errorConditionFormula>
        <errorMessage>Account and Related Account must be different entities.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>FinServ__AccountCannotBeAnIndividual</fullName>
        <active>true</active>
        <description>Error message when any selected account is part of an individual in an AAR.</description>
        <errorConditionFormula>OR(ISPICKVAL(FinServ__Account__r.FinServ__IndividualType__c,&apos;Individual&apos;),ISPICKVAL( FinServ__RelatedAccount__r.FinServ__IndividualType__c, &apos;Individual&apos;))</errorConditionFormula>
        <errorMessage>Account can&apos;t be a part of an individual.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>FinServ__CannotCreateInactiveRecord</fullName>
        <active>true</active>
        <description>Ensures that a record cannot be created as Inactive</description>
        <errorConditionFormula>AND(ISNEW(),FinServ__Active__c == false)</errorConditionFormula>
        <errorMessage>A Account-Account Relationship cannot be created as Inactive.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>FinServ__InactiveAARCannotBeEdited</fullName>
        <active>true</active>
        <errorConditionFormula>AND(PRIORVALUE(FinServ__Active__c) == false,NOT(ISNEW()))</errorConditionFormula>
        <errorMessage>Inactive record can&apos;t be edited. To update relationship information, you can create a new one.</errorMessage>
    </validationRules>
</CustomObject>